# Advisors

./: .gitignore  AGENTS.md  README.md  plan.md  pyproject.toml
configs/: c9_sources.yaml  sources.yaml
src/advisors/: __init__.py  cache.py  cli.py  coverage.py  discover.py  extract.py  parquet.py  privacy.py  registry.py  release.py  url_utils.py  xjtu_portal.py
tests/: test_cache.py  test_cli_extract.py  test_discover.py  test_extract.py  test_registry.py  test_url_utils.py  test_xjtu_portal.py
