[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "advisors-data"
version = "0.1.0"
description = "Open, source-traceable dataset tooling for Chinese university faculty profiles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "pyarrow>=15",
  "PyYAML>=6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
advisors = "advisors.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
